Fix body overflow behavior
Dragged item could cause a scroll bar to appear when moving beyond the edge of the screen

--- a/www/hub.css
+++ b/www/hub.css
@@ -26,6 +26,10 @@ div.title-bar {
   -webkit-app-region: drag;
 }
 
+body {
+  overflow: hidden;
+}
+
 body.fancy-title-bar div.title-bar {
   display: initial;
 }
